commit (added the manager role to team assignment)

--- a/templates/daily_reports/edit.html
+++ b/templates/daily_reports/edit.html
@@ -3,9 +3,9 @@
 {% block title %}Edit Daily Report{% endblock %}
 
 {% block content %}
-<div class="container-fluid px-2 px-md-3">
+<div class="container-fluid px-3 px-md-4">
     <div class="row justify-content-center">
-        <div class="col-12 col-lg-10 col-xl-8">
+        <div class="col-12 col-xl-11">
             <!-- Back Button -->
             <div class="mb-3">
                 <a href="{{ url_for('daily_reports') }}" class="btn btn-outline-secondary">
