--- a/templates/daily_reports/new.html
+++ b/templates/daily_reports/new.html
@@ -3,9 +3,9 @@
 {% block title %}Submit Daily Report{% endblock %}
 
 {% block content %}
-<div class="container-fluid px-2 px-md-3">
+<div class="container-fluid px-3 px-md-4">
     <div class="row justify-content-center">
-        <div class="col-12 col-lg-10 col-xl-8">
+        <div class="col-12 col-xl-11">
             <div class="card shadow-sm">
                 <div class="card-header bg-primary text-white">
                     <h4 class="mb-1 d-flex align-items-center">
