--- a/templates/daily_reports/view.html
+++ b/templates/daily_reports/view.html
@@ -3,9 +3,9 @@
 {% block title %}Daily Report - {{ report.work_title }}{% endblock %}
 
 {% block content %}
-<div class="container-fluid px-2 px-md-3">
+<div class="container-fluid px-3 px-md-4">
     <div class="row justify-content-center">
-        <div class="col-12 col-lg-10 col-xl-8">
+         <div class="col-12 col-xl-11">
             <!-- Back Button -->
             <div class="mb-3">
                 <a href="{{ url_for('daily_reports') }}" class="btn btn-outline-secondary">
@@ -25,7 +25,7 @@
                                 <i class="bi bi-calendar me-1"></i>{{ report.report_date.strftime('%d-%m-%Y') if
                                 report.report_date else '' }}
                                 {% if report.created_at %}
-                                <i class="bi bi-clock ms-3 me-1"></i>{{ report.created_at.strftime('%I:%M %p') }}
+                                <i class="bi bi-clock ms-3 me-1"></i>{{ (report.created_at | to_ist).strftime('%I:%M %p') }}
                                 {% endif %}
                                 <i class="bi bi-person ms-3 me-1"></i>{{ report.user_name }}
                             </small>
