--- a/templates/tasks/edit.html
+++ b/templates/tasks/edit.html
@@ -3,9 +3,9 @@
 {% block title %}Edit Task - {{ config.APP_NAME }}{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid px-3 px-md-4">
     <div class="row justify-content-center">
-        <div class="col-md-10">
+        <div class="col-12 col-xl-11">
             <div class="d-flex align-items-center mb-4">
                 <a href="{{ url_for('view_task', id=task.id) }}" class="btn btn-outline-secondary me-3">
                     <i class="fas fa-arrow-left"></i>
